# Template-FastAPI-Websocket

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.devcontainer/: devcontainer.json
src/: handler.py  server.py
