[tool.poetry]
name = "template-fastapi-websocket"
version = "0.1.0"
description = "A simple framework for building websockets using fastapi."
authors = ["Arnab Dhar <arnabdhar32@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.1"
pydantic = "^2.6.4"
uvicorn = "^0.29.0"
uvloop = "^0.19.0"
httptools = "^0.6.1"
websockets = "^12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
